fix horizontal scrollbar (960 min)

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,8 +11,10 @@ body {
   line-height: 1.75;
   background: #fff;
   min-width: 800px;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
+  @media (min-width: 960px) {
+    overflow-x: hidden;
+  }
 }
 .break-word {
   word-break: break-word;
